<resources>
    <string name="app_name">RPG Runner</string>
    <string name="action_settings">Settings</string>
    <string name="run">RUN</string>
    <string name="player_level">Level: </string>
    <string name="health">HP</string>
    <string name="magic">MP</string>
    <string name="player_name"><u>Player_Name</u></string>

    <!--start screen texts-->
    <string name="adventure">Adventure</string>
    <string name="mission">Run Missions</string>
    <string name="character">Character</string>
    <string name="option">Options</string>
    <string name="help">Help</string>
    <string name="totalrun">"Total Run"</string>
    <string name="miles">Miles</string>

    <!--battle screen texts-->
    <string name="enemy_name">Monster Name</string>
    <string name="battle_status">Battle Status</string>
    <string name="player_turn">Player Turn</string>
    <string name="player_stat">Player Stats</string>
    <string name="attack">Attack</string>
    <string name="skill">Skill</string>
    <string name="item">Item</string>
    <string name="defend">Defend</string>

    <!--mission screen texts-->
    <string name="daily">Daily</string>
    <string name="story">Story</string>
    <string name="req">Requirements</string>
    <string name="reward">Rewards</string>
    <string name="start_mission">Start!</string>
    <string name="done_mission">Done!</string>

    <!--default values texts-->
    <string name="default_health">10/10</string>
    <string name="default_magic">5/5</string>
    <string name="default_none">-/-</string>
    <string name="default_mile">0.0</string>
    <string name="default_exp">1/10</string>
    <string name="default_level">Level 1</string>
    <string name="default_mission_title">Mission *: <b>Mission Tittle</b></string>
    <string name="default_mission_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit sed vulputate mi sit amet mauris commodo.</string>
    <string name="default_mission_requirements"><b>*</b> Miles</string>
    <string name="default_mission_reward"><b>***</b> exp, <b>***</b> gold</string>

    <!--missions-->
    <string-array name="story_missions_title">
        <item>Mission 1: <b>Who am I?</b></item>
        <item>Mission 2: <b>Who are You?</b></item>
        <item>Mission 3: <b>Who are They?</b></item>
    </string-array>

    <string-array name="story_missions_desc">
        <item>Scared and confused, Ryu runs away from the burning <b>Krata Village</b>.</item>
        <item>An old man runs by Ryu side near <b>Mountain Ju</b>. <i>\"The truth is hidden within yourself, Ryu.\"</i> he said.</item>
        <item>Just before <b>The Ruin of Kuda</b>, Ryu\'s path was blocked by a group of raiders.</item>
    </string-array>

    <string-array name="story_missions_req">
        <item><b>1</b> Mile</item>
        <item><b>2</b> Miles</item>
        <item><b>3</b> Miles</item>
    </string-array>

    <string-array name="story_missions_rewards">
        <item><b>20</b> exp, <b>20</b> gold</item>
        <item><b>50</b> exp, <b>50</b> gold</item>
        <item><b>100</b> exp, <b>100</b> gold</item>
    </string-array>

    <string name="music_option_switch">Music</string>
    <string name="large_text">
        "This is the Help Page\n"
        "Help Yourself :)\n"
    </string>
    <string name="mission_req">Mission Requirements</string>
    <string name="finish">Finish</string>
    <string name="current_run">Current Run</string>
    <string name="lucky_charm">Lucky Charm</string>
    <string name="torch">Torch</string>
    <string name="choose_item">Choose your item</string>
    <string name="choose_skill">Choose your skill</string>
    <string name="fire">Fire</string>
    <string name="ice">Ice</string>
    <string name="default_damage">-10</string>
    <string name="help_text">In this game, you are not only expected to play by defeating monster.\n\nYou are supposed to do these three tasks in the game.\n\n1. Defeat monsters on the map\n2. Complete Running missions\n3. Open in-game rewards</string>
    <string name="enemy">Enemy</string>
    <string name="chest">Chest</string>

</resources>
